2005-09-08 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[bug #14266: use __extension__ in avr-libc header files]
	* include/avr/boot.h: Use __extension__ for brace groups that
	return an expression value.
	* include/avr/parity.h: (Ditto.)
	* include/avr/pgmspace.h: (Ditto.) Document exported types and
	defines.

2005-09-07 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/eeprom.h (eeprom_is_ready): Add new version for AT86RF401
	[Fixed bug #14378]

2005-09-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/inttypes.h: fix a doxygen markup comment.

2005-09-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/sleep.h: sleep type 2 has a few extensions
	(tiny2313, tiny13, tiny26), fix these; make the doxygen docs work
	again [bug #12496: about set_sleep_mode() and
	tiny26/tiny2313]

2005-09-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Make "make distcheck" finally work again:

	* Makefile.am: set DISTCHECK_CONFIGURE_FLAGS.
	* configure.ac (AM_INIT_AUTOMAKE): move from gzip to bzip2 distfile.
	* scripts/Makefile.am: add avr-man.in to EXTRA_DIST, fix location
	of stamp-h1 dependecny.

2005-09-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/interrupt.h: Fix description of sei() [bug #13557
	overview: small typo in avr-libc-user-manual-1.2.3], emit
	faked function prototypes for sei() and sli() within doxygen.

2005-09-07 Anatoly Sokolov <aesok@pautinka.net>

	* configure.ac: add tests for the ATmega640/1280/1281 support
	* devtools/gen-avr-lib-tree.sh: add support for ATmega640/1280/1281.
	* include/avr/io.h: (Ditto.) 
	* include/avr/wdt.h: (Ditto.)
	* include/avr/iom640.h: new file.
	* include/avr/iom1280.h: new file.
	* include/avr/iom1281.h: new file.
	* include/avr/iomxx0_1.h: new file.
	* include/avr/Makefile.am: include new files.
	* crt1/gcrt1.S: add more interrupt vector names.
	* doc/api/main_page.dox: Document support for ATmega640/1280/1281.
	* doc/api/using-tools.dox: (Ditto.)

2005-09-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
